--- a/index.html
+++ b/index.html
@@ -138,12 +138,22 @@
 
     <section id="experience">
       <h2>Work Experience</h2>
-
+       <div class="experience">
+        <h3>Software Engineer – Bebo Technology</h3>
+        <p><strong>June 2025 – Present | Chandigarh, India</strong></p>
+        <ul> 
+          <li>Designed and implemented a scalable automation framework from scratch </li>
+          <li>Planned, designed, and executed functional, non-functional, and automated test cases.</li>
+          <li>Handled Regression, Smoke, Performance, and Sanity testing for production releases.</li>
+          <li>Logged and tracked bugs with severity/prioritization and RCA analysis.</li>
+        </ul>
+      </div>
       <div class="experience">
-        <h3>Automation Test Engineer – SQE Labs</h3>
-        <p><strong>Jan 2023 – Present | Mohali, Punjab, India</strong></p>
+        <h3>Sr. SDET – SQE Labs</h3>
+        <p><strong>Jan 2023 – May 2025 | Mohali, Punjab, India</strong></p>
         <ul>
           <li>Planned, designed, and executed functional, non-functional, and automated test cases.</li>
+          <li>Coordinate with the testing team for Regression, Smoke, Performance, and Sanity testing before every Production release</li>li>
           <li>Handled Regression, Smoke, Performance, and Sanity testing for production releases.</li>
           <li>Logged and tracked bugs with severity/prioritization and RCA analysis.</li>
         </ul>
