--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p><strong>Jan 2023 – May 2025 | Mohali, Punjab, India</strong></p>
         <ul>
           <li>Planned, designed, and executed functional, non-functional, and automated test cases.</li>
-          <li>Coordinate with the testing team for Regression, Smoke, Performance, and Sanity testing before every Production release</li>li>
+          <li>Coordinate with the testing team for Regression, Smoke, Performance, and Sanity testing before every Production release</li>
           <li>Handled Regression, Smoke, Performance, and Sanity testing for production releases.</li>
           <li>Logged and tracked bugs with severity/prioritization and RCA analysis.</li>
         </ul>
