--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <section id="summary">
       <h2>Profile Summary</h2>
       <div class="info-box">
-       Passionate value driven experienced individual looking to obtain a challenging position and work environment in the industry where I can utilize my expertise, professionalism and advocate technical skills towards the growth of the organization.
-       </div>
+      Results-driven Automation Test Engineer with 4 years of hands-on experience in designing, developing, and executing robust automation frameworks for web and API testing. Proficient in tools such as Selenium, TestNG, Postman, and RestAssured, with solid exposure to CI/CD pipelines using Jenkins and Azure DevOps. Skilled in performing UI testing, regression testing, and effective bug tracking using tools like JIRA. Adept at collaborating with cross-functional teams to enhance software quality, reduce manual effort, and accelerate delivery cycles. Strong understanding of SDLC, Agile methodologies, and testing best practices.
+      </div>
     </section>
 
     <section id="experience">
