--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Parveen Sharma - SDET Portfolio</title>
-   <style>
+  <title>Parveen Sharma - Sr. SDET Portfolio</title>
+  <style>
     * {
       box-sizing: border-box;
       margin: 0;
@@ -13,268 +13,234 @@
     }
 
     body {
-      background: #f4f7fa;
+      background: #fff;
       color: #2c3e50;
       line-height: 1.6;
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
     }
 
     header {
-      background: linear-gradient(135deg, #2c3e50, #3498db);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      margin-bottom: 30px;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 10px;
     }
 
     header h1 {
-      font-size: 2.8rem;
+      font-size: 2rem;
+      color: #000;
     }
 
-    header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
+    header p.role {
+      font-weight: bold;
+      margin-top: 4px;
     }
 
-    main {
-      max-width: 960px;
-      margin: 40px auto;
-      padding: 0 20px;
+    .contact {
+      text-align: right;
+      font-size: 0.9rem;
     }
 
-    section {
-      margin-bottom: 50px;
+    .grid {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 30px;
     }
 
     section h2 {
-      font-size: 1.8rem;
-      border-left: 5px solid #3498db;
-      padding-left: 10px;
-      color: #2c3e50;
+      font-size: 1.2rem;
+      border-bottom: 2px solid #2c3e50;
+      display: inline-block;
+      margin-bottom: 15px;
+      padding-bottom: 2px;
+    }
+
+    .experience, .edu-item, .project, .skill-list, .language, .interest {
       margin-bottom: 20px;
     }
 
-    .info-box, .experience, .project, .edu-item, .language, .interest {
-      background: #fbfbfb;
-      border-left: 4px solid #3498db;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-      margin-bottom: 20px;
+    .experience h3, .edu-item h3 {
+      font-size: 1rem;
+      font-weight: bold;
     }
 
-    .experience ul, .edu-item ul {
-      margin-top: 10px;
-      padding-left: 20px;
+    .experience p, .edu-item p {
+      font-size: 0.9rem;
+      color: #555;
     }
 
-    #skills ul {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      list-style: none;
+    .experience ul {
+      margin-top: 5px;
+      padding-left: 18px;
+      font-size: 0.9rem;
     }
 
-    #skills li {
+    .skill-list span {
+      display: inline-block;
       background: #e8f4fd;
-      padding: 10px 15px;
-      border-radius: 20px;
-      font-weight: 600;
       color: #217dbb;
+      padding: 6px 12px;
+      border-radius: 15px;
+      font-size: 0.85rem;
+      margin: 4px;
     }
 
-    #languages ul, #interests ul {
+    .project a {
+      color: #217dbb;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
+    }
+
+    ul.inline-list {
       list-style: none;
+      padding: 0;
       display: flex;
-      gap: 20px;
+      gap: 10px;
       flex-wrap: wrap;
-      padding-left: 0;
     }
 
     footer {
       text-align: center;
-      padding: 20px;
-      background: #2c3e50;
-      color: white;
-    }
-
-    a {
-      color: #3498db;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-
-      #skills ul {
-        flex-direction: column;
-      }
-
-      #languages ul, #interests ul {
-        flex-direction: column;
-        gap: 10px;
-      }
+      font-size: 0.8rem;
+      margin-top: 40px;
+      padding-top: 10px;
+      border-top: 1px solid #ddd;
+      color: #777;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Parveen Sharma</h1>
-    <p>SDET | Software Test Engineer | Automation Enthusiast</p>
+    <div>
+      <h1>Parveen Sharma</h1>
+      <p class="role">Sr. SDET</p>
+      <p>Passionate value driven experienced individual looking to obtain a challenging position and work environment in the industry where I can utilize my expertise, professionalism and advocate technical skills towards the growth of the organization.</p>
+    </div>
+    <div class="contact">
+      <p><a href="mailto:parveenritwal5362653@gmail.com">parveenritwal5362653@gmail.com</a></p>
+      <p>+91 8529751099</p>
+      <p>Karnal, India</p>
+    </div>
   </header>
 
-  <main>
-    <section id="summary">
-      <h2>Profile Summary</h2>
-      <div class="info-box">
-      Results-driven Automation Test Engineer with 4 years of hands-on experience in designing, developing, and executing robust automation frameworks for web and API testing. Proficient in tools such as Selenium, TestNG, Postman, and RestAssured, with solid exposure to CI/CD pipelines using Jenkins and Azure DevOps. Skilled in performing UI testing, regression testing, and effective bug tracking using tools like JIRA. Adept at collaborating with cross-functional teams to enhance software quality, reduce manual effort, and accelerate delivery cycles. Strong understanding of SDLC, Agile methodologies, and testing best practices.
-      </div>
-    </section>
+  <div class="grid">
+    <!-- Left Column -->
+    <div>
+      <section id="experience">
+        <h2>Work Experience</h2>
 
-    <section id="experience">
-      <h2>Work Experience</h2>
-       <div class="experience">
-        <h3>Software Engineer – Bebo Technology</h3>
-        <p><strong>June 2025 – Present | Chandigarh, India</strong></p>
-        <ul> 
-          <li>Designed and implemented a scalable automation framework from scratch </li>
-          <li>Planned, designed, and executed functional, non-functional, and automated test cases.</li>
-          <li>Handled Regression, Smoke, Performance, and Sanity testing for production releases.</li>
-          <li>Logged and tracked bugs with severity/prioritization and RCA analysis.</li>
+        <div class="experience">
+          <h3>Software Engineer – Bebo Technology Pvt. Ltd</h3>
+          <p>06/2025 – Present | Chandigarh, India</p>
+          <ul>
+            <li>Designed and implemented a scalable automation framework from scratch.</li>
+            <li>Developed and executed UI automation test scripts for critical user journey.</li>
+            <li>Led regression testing cycles for major product releases, reducing production incidents by 40%.</li>
+          </ul>
+        </div>
+
+        <div class="experience">
+          <h3>Senior SDET – SQE Labs Software Testing Company</h3>
+          <p>01/2023 – Present | Mohali, Punjab, India</p>
+          <ul>
+            <li>Planned, designed and executed functional, non-functional, and automated test cases.</li>
+            <li>Coordinated regression, smoke, performance, and sanity testing before every production release.</li>
+            <li>Logged bugs, tracked severity/priority, and conducted RCA & trend analysis after every release.</li>
+          </ul>
+        </div>
+
+        <div class="experience">
+          <h3>Test Automation QA – Code Quotient Pvt. Ltd</h3>
+          <p>09/2021 – 11/2022 | Mohali, Punjab, India</p>
+          <ul>
+            <li>Planned, designed and executed functional, non-functional, and automated test cases.</li>
+            <li>Worked in Agile methodology and wrote high quality test code.</li>
+            <li>Performed detailed hands-on testing of new functionalities.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="education">
+        <h2>Education</h2>
+
+        <div class="edu-item">
+          <h3>Master of Computer Application</h3>
+          <p>Panipat Institute of Engineering and Technology | 07/2018 – 07/2021 | Panipat, Haryana</p>
+        </div>
+
+        <div class="edu-item">
+          <h3>Bachelor of Science</h3>
+          <p>Pt. Chiranji Lal Govt. College | 07/2015 – 07/2018 | Karnal, Haryana</p>
+        </div>
+      </section>
+
+      <section id="languages">
+        <h2>Languages</h2>
+        <ul class="inline-list">
+          <li>English – Professional Working Proficiency</li>
+          <li>Hindi – Full Professional Proficiency</li>
         </ul>
-      </div>
-      <div class="experience">
-        <h3>Sr. SDET – SQE Labs</h3>
-        <p><strong>Jan 2023 – May 2025 | Mohali, Punjab, India</strong></p>
-        <ul>
-          <li>Planned, designed, and executed functional, non-functional, and automated test cases.</li>
-          <li>Coordinate with the testing team for Regression, Smoke, Performance, and Sanity testing before every Production release</li>
-          <li>Handled Regression, Smoke, Performance, and Sanity testing for production releases.</li>
-          <li>Logged and tracked bugs with severity/prioritization and RCA analysis.</li>
-        </ul>
-      </div>
+      </section>
 
-      <div class="experience">
-        <h3>Test Automation QA – Code Quotient Pvt. Ltd</h3>
-        <p><strong>Sep 2021 – Nov 2022 | Mohali, Punjab, India</strong></p>
-        <ul>
-          <li>Worked in Agile methodology and contributed to sprint-based automation tasks.</li>
-          <li>Designed, enhanced, debugged and maintained automated test suites.</li>
-          <li>Collaborated with dev teams to improve code quality and test coverage.</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="education">
-      <h2>Education</h2>
-
-      <div class="edu-item">
-        <h3>Master of Computer Applications</h3>
-        <p>Panipat Institute of Engineering and Technology, Panipat, Haryana (2018 – 2021)</p>
-      </div>
-
-      <div class="edu-item">
-        <h3>Bachelor of Science</h3>
-        <p>Pt. Chiranji Lal Govt. College, Karnal, Haryana (2015 – 2018)</p>
-      </div>
-    </section>
-
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Selenium</li><li>Scrum</li><li>HTML</li><li>CSS</li><li>SQL/MySQL</li>
-        <li>Python</li><li>Django</li><li>Azure</li><li>JavaScript</li>
-        <li>Postman</li><li>RestAssured</li><li>BDD</li><li>TestNG/MsTest</li>
-        <li>Nunit/Junit</li><li>C#</li><li>SpecFlow</li><li>Cucumber</li>
-        <li>Web Development</li><li>Functional Testing</li><li>Smoke Testing</li>
-        <li>Regression Testing</li><li>Java Core</li><li>Pytest</li><li>Jira</li>
-        <li>Cypress</li><li>Bug Tracking</li>
-      </ul>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-
-      <div class="project">
-        <h3>E-Commerce Ice Cream Desktop App</h3>
-        <p>Built with Python, Django, Bootstrap, and JavaScript.</p>
-        <p>Includes: customer authentication, cart system, order management, and admin dashboard.</p>
-        <a href="https://github.com/parveen-shandilya/my-website-icecream" target="_blank">View Project on GitHub</a>
-      </div>
-
-
-      <div class="project">
-    <h3>TestNG Parallel Execution with Docker</h3>
-    <p>Framework to run Selenium TestNG tests in parallel using Docker containers for scalable automation.</p>
-    <a href="https://github.com/parveen-shandilya/TestNGParallelDocker" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>Playwright Automation Framework</h3>
-    <p>End-to-end UI test automation using Microsoft Playwright with modern reporting and configuration support.</p>
-    <a href="https://github.com/parveen-shandilya/PlaywrightProject" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>Cypress with Docker Integration</h3>
-    <p>Containerized Cypress testing framework for fast and consistent frontend testing across environments.</p>
-    <a href="https://github.com/parveen-shandilya/CypressAndDocker" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>Pytest Automation Framework</h3>
-    <p>Automation framework built using Python and Pytest, featuring modular test structure and logging.</p>
-    <a href="https://github.com/parveen-shandilya/pytestAutomation" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>SpecFlow with Selenium Framework</h3>
-    <p>BDD testing framework using SpecFlow and Selenium with feature files, step definitions, and reports.</p>
-    <a href="https://github.com/parveen-shandilya/SpecFlowFramework" target="_blank">View on GitHub</a>
-  </div>
-
-  <div class="project">
-    <h3>Robot Framework Automation</h3>
-    <p>Keyword-driven testing framework using Robot Framework for acceptance testing and automation.</p>
-    <a href="https://github.com/parveen-shandilya/RobotFrameWork" target="_blank">View on GitHub</a>
-  </div>
-    </section>
-
-    <section id="languages">
-      <h2>Languages</h2>
-      <div class="language">
-        <ul>
-          <li><strong>English:</strong> Professional Working Proficiency</li>
-          <li><strong>Hindi:</strong> Full Professional Proficiency</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="interests">
-      <h2>Interests</h2>
-      <div class="interest">
-        <ul>
+      <section id="interests">
+        <h2>Interests</h2>
+        <ul class="inline-list">
           <li>Music</li>
           <li>Sports</li>
           <li>Travel</li>
         </ul>
-      </div>
-    </section>
+      </section>
+    </div>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <div class="info-box">
-        <p><strong>Email:</strong> parveenritwal5362653@gmail.com</p>
-        <p><strong>Phone:</strong> +91 85297 51099</p>
-        <p><strong>Location:</strong> Karnal, Haryana, India</p>
-      </div>
-    </section>
-  </main>
+    <!-- Right Column -->
+    <div>
+      <section id="skills">
+        <h2>Skills</h2>
+        <div class="skill-list">
+          <span>Selenium</span><span>Scrum</span><span>HTML</span><span>CSS</span><span>SQL/MySQL</span>
+          <span>Python</span><span>JavaScript</span><span>Postman</span><span>RestAssured</span>
+          <span>BDD</span><span>TestNG/MsTest</span><span>Nunit/Junit</span><span>C#</span>
+          <span>SpecFlow/Cucumber</span><span>Agile</span><span>Functional Testing</span>
+          <span>Smoke Testing</span><span>Regression Testing</span><span>Java Core</span>
+          <span>Pytest</span><span>Jira</span><span>Cypress</span><span>Azure DevOps</span>
+          <span>Bug Tracking</span><span>Playwright</span>
+        </div>
+      </section>
+
+      <section id="projects">
+        <h2>Personal Projects</h2>
+        <div class="project">
+          <h3>E-Commerce (Ice Cream Desktop Application)</h3>
+          <p>05/2021 – 07/2021</p>
+          <p>Built using Python, Django, Bootstrap, and JavaScript.</p>
+          <p>Features: Customer Authentication, Profile, Cart, Orders, and Admin management.</p>
+          <a href="https://github.com/parveen-shandilya/my-website-icecream/tree/main" target="_blank">View Project on GitHub</a>
+        </div>
+
+        <div class="project">
+          <h3>Automation Framework Projects</h3>
+          <p>Various automation frameworks showcasing skills in Selenium, Playwright, Cypress, Pytest, SpecFlow, and Robot Framework.</p>
+          <ul>
+            <li><a href="https://github.com/parveen-shandilya/TestNGParallelDocker" target="_blank">TestNG Parallel Execution with Docker</a></li>
+            <li><a href="https://github.com/parveen-shandilya/PlaywrightProject" target="_blank">Playwright Automation Framework</a></li>
+            <li><a href="https://github.com/parveen-shandilya/CypressAndDocker" target="_blank">Cypress with Docker Integration</a></li>
+            <li><a href="https://github.com/parveen-shandilya/pytestAutomation" target="_blank">Pytest Automation Framework</a></li>
+            <li><a href="https://github.com/parveen-shandilya/SpecFlowFramework" target="_blank">SpecFlow with Selenium Framework</a></li>
+            <li><a href="https://github.com/parveen-shandilya/RobotFrameWork" target="_blank">Robot Framework Automation</a></li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </div>
 
   <footer>
     &copy; 2025 Parveen Sharma. All rights reserved.
