--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Parveen Sharma - Sr. SDET Portfolio</title>
+  <title>Parveen Sharma - Sr. SDET</title>
   <style>
     * {
       box-sizing: border-box;
@@ -150,7 +150,7 @@
 
         <div class="experience">
           <h3>Senior SDET – SQE Labs Software Testing Company</h3>
-          <p>01/2023 – Present | Mohali, Punjab, India</p>
+          <p>01/2023 – 05/2025 | Mohali, Punjab, India</p>
           <ul>
             <li>Planned, designed and executed functional, non-functional, and automated test cases.</li>
             <li>Coordinated regression, smoke, performance, and sanity testing before every production release.</li>
